test/tests/compiler/11_long_integers/valid/plx1_bool_is_i32.plx
pub fn main(none) i32 {
    a: i32;
    b: i32;

    return not (a or b)
}

pub a: bool = false
pub b: bool = true
