test/tests/compiler/11_long_integers/invalid_parse/long_constant_as_var.plx
pub fn main(none) i32 {
    # You can't use a long constant where an identifier is required
    10l: i32;
    return 0
}
